fix live cameras

--- a/src/pages/addCamera/camera_stream_test.html
+++ b/src/pages/addCamera/camera_stream_test.html
@@ -7,33 +7,36 @@
   <canvas id="canvas" width="640" height="480"></canvas>
 
   <script>
-  
-      const canvas = document.getElementById('canvas');
-      const context = canvas.getContext('2d');
-      const socket = new WebSocket('ws://127.0.0.1:8000/live-camera-reid/stream_camera/192.168.18.119:8080'); // Adjust the WebSocket URL accordingly
+    const canvas = document.getElementById('canvas');
+    const context = canvas.getContext('2d');
 
-      socket.binaryType = 'arraybuffer';
+    // Retrieve selectedCameraIp from the query parameter
+    const urlParams = new URLSearchParams(window.location.search);
+    const selectedCameraIp = urlParams.get('selectedCameraIp');
 
-      socket.onmessage = function (event) {
-        if (event.data instanceof ArrayBuffer) {
-          const buffer = new Uint8Array(event.data);
-          const blob = new Blob([buffer], { type: 'image/jpeg' });
+    // Replace the WebSocket URL with the selected camera IP
+    const socket = new WebSocket(`ws://127.0.0.1:8000/live-camera-reid/stream_camera/${selectedCameraIp}`);
 
-          const image = new Image();
-          image.onload = function () {
-            context.clearRect(0, 0, canvas.width, canvas.height);
-            context.drawImage(image, 0, 0, canvas.width, canvas.height);
-          };
-          image.src = URL.createObjectURL(blob);
-        }
-      };
-      socket.onclose = function () {
-        console.error(socket);
+    socket.binaryType = 'arraybuffer';
+
+    socket.onmessage = function (event) {
+      if (event.data instanceof ArrayBuffer) {
+        const buffer = new Uint8Array(event.data);
+        const blob = new Blob([buffer], { type: 'image/jpeg' });
+
+        const image = new Image();
+        image.onload = function () {
+          context.clearRect(0, 0, canvas.width, canvas.height);
+          context.drawImage(image, 0, 0, canvas.width, canvas.height);
+        };
+        image.src = URL.createObjectURL(blob);
+      }
+    };
+
+    socket.onclose = function () {
+      console.error(socket);
       alert('Camera stream connection closed');
     };
-    
-
-    
   </script>
 </body>
 </html>
